--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
     "eslint-cli": "^1.1.1",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
-  "dependencies": {
-    "@babel/preset-env": "^7.12.11"
-  }
+  "dependencies": {}
 }
