--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel src -d dist",
+    "b": "babel"
   },
   "repository": {
     "type": "git",
@@ -26,19 +28,23 @@
       "eslint --fix"
     ],
     "*.{less}": [
-      "stylelint --fix",
-      "git add"
+      "stylelint --fix"
     ]
   },
   "homepage": "https://github.com/pixding/react-comdemo#readme",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime-corejs3": "^7.12.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "core-js": "^3.8.2",
     "eslint": "^7.17.0",
     "eslint-cli": "^1.1.1",
     "eslint-config-prettier": "^7.1.0",
@@ -53,7 +59,12 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "browserslist": [
+    "Android >= 4",
+    "iOS >= 9"
+  ]
 }
