--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "babel src -d dist",
-    "b": "babel"
+    "b": "babel",
+    "build": "webpack --config ./build/webpack.config.js",
+    "build:com": "webpack --config ./build/webpack.com.config.js"
   },
   "repository": {
     "type": "git",
@@ -39,11 +41,13 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
     "@babel/runtime-corejs3": "^7.12.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "babel-loader": "^8.2.2",
     "core-js": "^3.8.2",
     "eslint": "^7.17.0",
     "eslint-cli": "^1.1.1",
@@ -56,10 +60,11 @@
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
